--- a/style.css
+++ b/style.css
@@ -65,14 +65,14 @@ input {
 
 table {
     position: relative;
-    background-color: #0d5db8;
+    background-color: lightblue;
     padding: 10px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 5px;
     position: relative;
     border-radius: 10%;
-    color: lightblue;
+    color: rgb(2, 2, 2);
     /* margin-top: 5px; */
     margin-bottom: 10px;
     font-size: 25px;
@@ -85,7 +85,7 @@ table th {
 
 table td {
     border: 1px solid lightblue;
-    /* padding: 4px 8px; */
+    text-align:left;
 }
 
 .displayPrice {
