--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:#317fd8;
+    background-color: #317fd8;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
     text-align: center;
@@ -43,7 +43,22 @@ h2 {
     margin-top: 20px;
 }
 
-input {
+.payment_type{
+    position:relative;
+    /* display: inline-block; */
+    margin: 5px auto;
+
+}
+
+.membership_type{
+    position:relative;
+    /* display: inline-block; */
+    margin: 5px auto;
+
+}
+
+
+.input {
     background-color: rgb(235, 228, 228);
     padding: 15px;
     border: 15px;
@@ -52,7 +67,7 @@ input {
 
 .charge_breakdown {
     position: relative;
-    background-color:lightblue;
+    background-color: lightblue;
     border-style: solid;
     position: relative;
     height: fit-content;
@@ -60,7 +75,6 @@ input {
     padding: 10px;
     margin: auto;
     margin-top: 20px;
-
 }
 
 table {
@@ -76,7 +90,6 @@ table {
     /* margin-top: 5px; */
     margin-bottom: 10px;
     font-size: 25px;
-
 }
 
 table th {
@@ -85,7 +98,7 @@ table th {
 
 table td {
     border: 1px solid lightblue;
-    text-align:left;
+    text-align: left;
 }
 
 .displayPrice {
@@ -98,15 +111,16 @@ table td {
     border-style: solid;
     /* font-weight: 100; */
     position: relative;
-
 }
 
-#calcBtn{
+#calcBtn {
     background-color: #0d5db8;
     font-size: large;
     color: rgb(255, 255, 255);
     padding: 3%;
     margin-top: 15px;
     position: relative;
+    margin: auto;
+    display:flex;
     border-radius: 0in;
 }
