--- a/style.css
+++ b/style.css
@@ -57,7 +57,6 @@ h2 {
 
 }
 
-
 .input {
     background-color: rgb(235, 228, 228);
     padding: 15px;
@@ -102,7 +101,7 @@ table td {
 }
 
 .displayPrice {
-    background-color: lightblue;
+    background-color: rgb(233, 233, 233);
     padding: 15px;
     margin: auto;
     font-size: 32px;
